--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -78,7 +78,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/coroutine/index.html">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -102,11 +102,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/flyweight/">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
-                Added serialization support via <a href="/doc/libs/1_57_0_b1/libs/serialization/index.html">Boost
+                Added serialization support via <a href="/doc/libs/1_57_0_b1/libs/serialization/">Boost
                 Serialization</a>.
               </div>
             </li>
@@ -116,6 +116,130 @@
                 constructor was made explicit in Boost 1.56, which introduces a regression
                 in some initialization scenarios. The former non-explicit default
                 constructor has been restored (ticket <a href="https://svn.boost.org/trac/boost/ticket/10439">#10439</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/geometry/">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Improvements</em>
+                <ul>
+                  <li>
+                    <div>
+                      The support of parameters convertible to value_type in rtree
+                      insert(), remove() and count() functions
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8402">8402</a>
+                      Implicit conversion warnings
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/9354">9354</a>
+                      Bug in winding strategy affecting within() and covered_by()
+                      for non-cartesian coordinate systems
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10177">10177</a>
+                      Missing include
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10345">10345</a>
+                      Distance fails to compile for some coordinate types
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10398">10398</a>
+                      Wrong neighbour check in buffer, calculating turns
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10421">10421</a>
+                      Invalid Point-Box distance for spherical CS
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10615">10615</a>
+                      Rtree constructor feature request
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10643">10643</a>
+                      Invalid point_on_surface() result for big coordinates
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/10668">10668</a>
+                      Implicit conversion warnings (duplicated 8402)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Bugfixes</em>
+                <ul>
+                  <li>
+                    <div>
+                      Several fixes of bugs in algorithm buffer
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Bug in point_on_surface() for CCW Polygons (extreme_points())
+                      and numerical issue (thanks to Matt Amos)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Bug in disjoint() for A/A fixed by replacement of point_on_surface()
+                      with point_on_border() (thanks to Matt Amos)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      The result of convex_hull(), duplicated Point in open output,
+                      too small number of Points for 1- and 2-Point input
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Imprecision for big coordinates in centroid(), fixed by Points
+                      translation (related with ticket 10643)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      for_each_segment() not taking into account the last segment
+                      of open Geometry
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -147,7 +271,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_array/index.html">MultiArray</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_array/">MultiArray</a>:</span>
           <ul>
             <li>
               <div>
@@ -160,7 +284,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_index/">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -407,6 +531,40 @@
                     </div>
                   </li>
                 </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/units/">Units</a>:</span>
+          <ul>
+            <li>
+              <div>
+                New unit system &lt;boost/units/systems/information.hpp&gt; units
+                for: bit, byte, nat, hartley and shannon,
+              </div>
+            </li>
+            <li>
+              <div>
+                Add scale units for binary prefixes kibi, mebi, gibi, tebi, pebi,
+                zebi and yobi IEC prefixes
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix output of NaN on msvc-14
+              </div>
+            </li>
+            <li>
+              <div>
+                Add support for C++11 numeric_limits::max_digits10 and ::lowest
+              </div>
+            </li>
+            <li>
+              <div>
+                warning fixes
               </div>
             </li>
           </ul>
