Add extra 'Updated Libraries' and rebuild.

--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -78,6 +78,50 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/any/">Any</a>:</span>
+          <ul>
+            <li>
+              <div>
+                RTTI is not required any more (<a href="/doc/libs/1_57_0_b1/libs/any/type_index">TypeIndex</a>
+                library is used for RTTI emulation)
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed <a href="https://svn.boost.org/trac/boost/ticket/8958">#8958</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/circular_buffer/">Circular Buffer</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed some warnings and <code><span class="identifier">move_if_noexcept</span></code>
+                from Boost.Move is used <a href="https://svn.boost.org/trac/boost/ticket/7888">#7888</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/config/">Config</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <code><span class="identifier">BOOST_HAS_PRAGMA_DETECT_MISMATCH</span></code>
+                macro was added
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_57_0_b1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
@@ -264,6 +308,19 @@
             <li>
               <div>
                 Some of the internal components of the library were made public (<code><span class="identifier">minimum_category</span></code>, for example).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Some internal changes, library now consist of multiple headers instead
+                of a single one <a href="https://svn.boost.org/trac/boost/ticket/10391">#10391</a>, <a href="https://svn.boost.org/trac/boost/ticket/#10173">##10173</a>
               </div>
             </li>
           </ul>
@@ -531,6 +588,24 @@
                     </div>
                   </li>
                 </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/type_index/">TypeIndex</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <code><span class="identifier">BOOST_HAS_PRAGMA_DETECT_MISMATCH</span></code>
+                is now used to detect ODR violations <a href="https://svn.boost.org/trac/boost/ticket/10404">#10404</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Typos fixed <a href="https://svn.boost.org/trac/boost/ticket/#10294">##10294</a>
               </div>
             </li>
           </ul>
