Add updated libraries + rebuild

--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -328,12 +328,74 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/math/">Math</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added Hyperexponential Distribution.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix some spurious overflows in the incomplete gamma functions (with
+                thanks to Rocco Romeo).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix bug in derivative of incomplete beta when a = b = 0.5 - this
+                also effects several non-central distributions, see issue 10480.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed some corner cases in function round.
+              </div>
+            </li>
+            <li>
+              <div>
+                Don't support 80-bit floats in cstdfloat.hpp if standard library
+                support is broken.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_array/">MultiArray</a>:</span>
           <ul>
             <li>
               <div>
                 Fixed a friend-declaration related warning for clang (thanks to Marcel
                 Raad).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Changed rational to float conversions to exactly round to nearest.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added improved generic float to rational conversions.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed rare bug in exponent function for cpp_bin_float.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed various minor documentation issues.
               </div>
             </li>
           </ul>
@@ -606,6 +668,18 @@
             <li>
               <div>
                 Typos fixed <a href="https://svn.boost.org/trac/boost/ticket/10294">#10294</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/type_traits/">TypeTraits</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added new traits is_copy_assignable and is_final.
               </div>
             </li>
           </ul>
