--- a/development/library_metadata.html
+++ b/development/library_metadata.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
   "/style-v2/section-development.css" />
-  <!--[if IE]> <style type="text/css"> body { behavior: url(/style/csshover.htc); } </style> <![endif]-->
+  <!--[if IE]> <style type="text/css"> body { behavior: url(/style-v2/csshover.htc); } </style> <![endif]-->
 </head>
 
 <body>
