--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.57.0 beta</title>
+  <title>Version 1.57.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,13 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.57.0 beta</span></h2>
+              "news-title">Version 1.57.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
+              <p><span class=news-date">November  3rd, 2014 21:55 GMT</span></p>
               <p><a href="/doc/libs/1_57_0/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0.beta.1/boost_1_57_0_b1.tar.bz2/download">boost_1_57_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0.beta.1/boost_1_57_0_b1.tar.gz/download">boost_1_57_0_b1.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0.beta.1/boost_1_57_0_b1.7z/download">boost_1_57_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0.beta.1/boost_1_57_0_b1.zip/download">boost_1_57_0_b1.zip</a></td></tr></table>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0/boost_1_57_0.tar.bz2/download">boost_1_57_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0/boost_1_57_0.tar.gz/download">boost_1_57_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0/boost_1_57_0.7z/download">boost_1_57_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.57.0/boost_1_57_0.zip/download">boost_1_57_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -78,11 +78,11 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
-                RTTI is not required any more (<a href="/doc/libs/1_57_0/libs/type_index">TypeIndex</a>
+                RTTI is not required any more (<a href="/libs/type_index">TypeIndex</a>
                 library is used for RTTI emulation)
               </div>
             </li>
@@ -96,7 +96,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/asio/">Asio</a>:</span>
+          <span class="library"><a href="/libs/asio/">Asio</a>:</span>
           <ul>
             <li>
               <div>
@@ -160,7 +160,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/circular_buffer/">Circular Buffer</a>:</span>
+          <span class="library"><a href="/libs/circular_buffer/">Circular Buffer</a>:</span>
           <ul>
             <li>
               <div>
@@ -173,7 +173,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/config/">Config</a>:</span>
+          <span class="library"><a href="/libs/config/">Config</a>:</span>
           <ul>
             <li>
               <div>
@@ -186,7 +186,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -226,7 +226,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -250,11 +250,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/flyweight/">Flyweight</a>:</span>
+          <span class="library"><a href="/libs/flyweight/">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
-                Added serialization support via <a href="/doc/libs/1_57_0/libs/serialization/">Boost
+                Added serialization support via <a href="/libs/serialization/">Boost
                 Serialization</a>.
               </div>
             </li>
@@ -271,7 +271,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -395,7 +395,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -448,7 +448,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -494,7 +494,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/iterator/">Iterator</a>:</span>
+          <span class="library"><a href="/libs/iterator/">Iterator</a>:</span>
           <ul>
             <li>
               <div>
@@ -518,7 +518,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -531,7 +531,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -566,7 +566,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
         </div>
       </li>
       <li>
@@ -610,7 +610,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/multi_array/">MultiArray</a>:</span>
+          <span class="library"><a href="/libs/multi_array/">MultiArray</a>:</span>
           <ul>
             <li>
               <div>
@@ -623,7 +623,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -650,7 +650,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/multi_index/">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/libs/multi_index/">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -665,7 +665,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/preprocessor/">Preprocessor</a>:</span>
+          <span class="library"><a href="/libs/preprocessor/">Preprocessor</a>:</span>
           <ul>
             <li>
               <div>
@@ -703,7 +703,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -904,7 +904,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -922,7 +922,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/type_traits/">TypeTraits</a>:</span>
+          <span class="library"><a href="/libs/type_traits/">TypeTraits</a>:</span>
           <ul>
             <li>
               <div>
@@ -934,7 +934,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/units/">Units</a>:</span>
+          <span class="library"><a href="/libs/units/">Units</a>:</span>
           <ul>
             <li>
               <div>
@@ -968,7 +968,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -987,7 +987,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/utility/">Utility</a>:</span>
+          <span class="library"><a href="/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
               <div>
@@ -1004,7 +1004,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_57_0/libs/numeric/ublas/">uBLAS</a>:</span>
+          <span class="library"><a href="/libs/numeric/ublas/">uBLAS</a>:</span>
           <ul>
             <li>
               <div>
