--- a/development/running_regression_tests.html
+++ b/development/running_regression_tests.html
@@ -38,7 +38,7 @@ http://www.boost.org/development/website_updating.html
               clone.</em></strong></p>
 
               <p>To run a library's regression tests, run Boost's
-              <a href="/boost-build2/">b2</a> utility from the
+              <a href="/build/">b2</a> utility from the
               <tt><i>&lt;boost-root&gt;</i>/libs/<em>&lt;library&gt;</em>/test</tt> directory. To run a
               single test, specify its name (as found in 
               <tt><i>&lt;boost-root&gt;</i>/libs/<em>&lt;library&gt;</em>/test/Jamfile.v2</tt>) on the
