--- a/users/uses_open.html
+++ b/users/uses_open.html
@@ -226,7 +226,7 @@ http://www.boost.org/development/website_updating.html
               "../doc/libs/release/libs/asio/index.html">Boost.Asio</a>,
               <a href=
               "../doc/libs/release/libs/spirit/index.html">Boost.Spirit</a>
-              etc); <a href="../boost-build2/">Boost.Build</a>
+              etc); <a href="../build/">Boost.Build</a>
               is used as build system.</p>
 
               <h2>CGAL</h2>
