--- a/users/people/vladimir_prus.html
+++ b/users/people/vladimir_prus.html
@@ -32,7 +32,7 @@ http://www.boost.org/development/website_updating.html
               Vladimir Prus is a development tools engineer, working on build
               tools, debuggers and compilers as well as IDE UX and UI. He has a
               a <a href="http://vladimirprus.com">website</a> with more
-              details, and is often posts on <a href="http://google.com/+VladimirPrus">Google+</a>
+              details, and often posts on <a href="http://google.com/+VladimirPrus">Google+</a>.
               </p>
             </div>
           </div>
