Sort review ongoing.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -76,23 +76,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <!-- Added May 2009 -->
-
-                    <td>Sort</td>
-
-                    <td>Steven Ross</td>
-
-                    <td>
-                      <a href="https://github.com/spreadsort/sort">Source
-                      (GitHub)</a>
-                    </td>
-
-                    <td>Edward Diener</td>
-
-                    <td>November 10, 2014 - November 19, 2014</td>
-                  </tr>
-
-                  <tr>
                     <!-- Added January 2011 -->
 
                     <td>Quaternions, Vectors, Matrices (QVM)</td>
@@ -520,6 +503,24 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+                  <tr>
+                    <!-- Added May 2009 -->
+
+                    <td>Sort</td>
+
+                    <td>Steven Ross</td>
+
+                    <td>Edward Diener</td>
+
+                    <td>November 10, 2014 - November 19, 2014</td>
+
+                  <td>
+                    <a href=
+                    "Http://lists.boost.org/boost-announce/2014/08/0414.php">
+		    Ongoing</a>
+                  </td>
+                  </tr>
+
                 <tr>
                   <td>Review Wizard Status Report</td>
 
@@ -531,7 +532,7 @@ http://www.boost.org/development/website_updating.html
 
                   <td>
                     <a href=
-                    "http://lists.boost.org/boost-announce/2014/08/0414.php">Report</a>
+                    "http://lists.boost.org/boost-announce/2014/11/0421.php">Report</a>
                   </td>
                 </tr>
 
