Mention Google+ community in a couple of places.

--- a/community/reviews.html
+++ b/community/reviews.html
@@ -214,6 +214,9 @@ http://www.boost.org/development/website_updating.html
                     compilers, please mention them in the review notice so
                     reviewers with those compilers won't waste time
                     diagnosing known problems.</li>
+
+                    <li>If possible, also post the notice to the <a href="https://plus.google.com/communities/106814259809358442744">Google+
+                    community</a>.</li>
                   </ul>
                 </li>
 
