--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -517,7 +517,7 @@ http://www.boost.org/development/website_updating.html
                   <td>
                     <a href=
                     "Http://lists.boost.org/boost-announce/2014/08/0414.php">
-		    Ongoing</a>
+		    Pending</a>
                   </td>
                   </tr>
 
