Sort has been accepted.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -515,10 +515,13 @@ http://www.boost.org/development/website_updating.html
                     <td>November 10, 2014 - November 19, 2014</td>
 
                   <td>
-                    <a href=
-                    "Http://lists.boost.org/boost-announce/2014/08/0414.php">
-		    Pending</a>
-                  </td>
+                    <del><a href=
+                    "http://lists.boost.org/boost-announce/2014/08/0414.php">
+		    Pending</a><br/></del>
+		    <a href=
+		       "http://lists.boost.org/boost-announce/2014/11/0422.php">
+		      Accepted</a>
+                    </td>
                   </tr>
 
                 <tr>
