Compute has been scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -458,7 +458,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Antony Polukhin</td>
 
-                    <td>November XX, 2014 - December XX, 2014</td>
+                    <td>December 15, 2014 - December 24, 2014</td>
                   </tr>
 
 		  <!--
