Compute review begins.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -441,25 +441,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <!-- Added September 2014 -->
-                    <td>Compute</td>
-
-                    <td>Kyle Lutz</td>
-
-                    <td>
-                      <ul>
-                        <li><a href="https://github.com/kylelutz/compute">
-                            Source</a>
-                        <li><a href="http://kylelutz.github.io/compute/">
-                        Documentation</a>
-                      </ul>
-                    </td>                     
-
-                    <td>Antony Polukhin</td>
-
-                    <td>December 15, 2014 - December 24, 2014</td>
-                  </tr>
 
 		  <!--
                   <tr>
@@ -502,6 +483,24 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <!-- Added September 2014 -->
+                    <td>Compute</td>
+
+                    <td>Kyle Lutz</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>December 15, 2014 - December 24, 2014</td>
+ 
+
+                  <td>
+                    <a href=
+                    "http://lists.boost.org/boost-announce/2014/12/0423.php">
+		    Ongoing</a>
+                    </td>
+                 </tr>
 
                   <tr>
                     <!-- Added May 2009 -->
