Point run.py to new regression repo location. And remove tarball info as those no longer exist.

--- a/development/running_regression_tests.html
+++ b/development/running_regression_tests.html
@@ -84,13 +84,13 @@ http://www.boost.org/development/website_updating.html
                 test.</li>
 
                 <li>Download the <a href=
-                "https://github.com/boostorg/boost/blob/develop/tools/regression/src/run.py">
+                "https://raw.githubusercontent.com/boostorg/regression/master/src/run.py">
                 run.py</a> script into that directory:</li>
                 
                 <blockquote>
                 
                 <ol>
-                  <li>Open <a href="https://github.com/boostorg/boost/blob/develop/tools/regression/src/run.py">
+                  <li>Open <a href="https://raw.githubusercontent.com/boostorg/regression/master/src/run.py">
                   run.py</a> script in your browser.</li>
                   <li>Click the <strong><em>Raw</em></strong> button.</li> 
                   <li>Save as <tt>run.py</tt> in the directory you just created.</li>
@@ -239,21 +239,6 @@ Options:
               <pre>python run.py ... <strong>--incremental</strong>
 </pre>
 
-              <h3>Getting sources from Tarball</h3>
-
-              <p>By default the sources are obtained from the <a href=
-              "/users/download/#repository">Boost Subversion Repository</a>
-              and we prefer testers use SVN. But if you can't have an SVN
-              client installed you can obtain the sources as tarballs
-              (<tt>*.tar.gz</tt>). To indicate this pass an empty user to
-              <tt>run.py</tt>:</p>
-              <pre>python run.py ... <strong>--user=</strong>
-</pre>
-
-              <p><strong>Note</strong>: Both methods to obtain the sources
-              will get the latest code. This is accomplished by building the
-              tarball on-demand from the SVN sources.</p>
-
               <h3>Patching Boost sources</h3>
 
               <p>You might encounter an occasional need to make local
@@ -263,7 +248,7 @@ Options:
 
               <ol>
                 <li>Codify applying the desired modifications to the sources
-                located in the <tt>./boost</tt> subdirectory in a single
+                located in the <tt>./boost_root</tt> subdirectory in a single
                 executable script named <tt>patch_boost</tt>
                 (<tt>patch_boost.bat</tt> on Windows).</li>
 
