Compute has been accepted.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -496,9 +496,12 @@ http://www.boost.org/development/website_updating.html
  
 
                   <td>
-                    <a href=
+                    <del><a href=
                     "http://lists.boost.org/boost-announce/2014/12/0423.php">
-		    Ongoing</a>
+		    Ongoing</a><br/></del>
+		    <a href=
+		       "http://lists.boost.org/boost-announce/2015/01/0425.php">
+		      Accepted</a>
                     </td>
                  </tr>
 
