Add new pages to menu.
The pull request report doesn't fit that well, but it'll do for now.

--- a/common/menu-development.html
+++ b/common/menu-development.html
@@ -10,6 +10,9 @@
     <li><a href="/development/bugs.html" class="internal">Reporting and Fixing
     Bugs<span class="link">&gt;</span></a></li>
 
+    <li><a href="/development/pull_requests.php" class="internal">Open Pull
+    Requests Report<span class="link">&gt;</span></a></li>
+
     <li>
       <a href="/development/testing.html">Testing <span class=
       "link">&gt;</span></a>
@@ -51,6 +54,10 @@
         "link">&gt;</span></a></li>
 
         <li><a href="/development/int_const_guidelines.html">Coding
+        Guidelines for Integral Constant Expressions <span class=
+        "link">&gt;</span></a></li>
+
+        <li><a href="/development/library_metadata.html">Coding
         Guidelines for Integral Constant Expressions <span class=
         "link">&gt;</span></a></li>
       </ul>
