Dependency Injection Library Added.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -441,6 +441,25 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added January 2015 -->
+                    <td>Dependency Injection (DI)</td>
+
+                    <td>Krzysztof Jusiak</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/krzysztof-jusiak/di">
+                            Source</a>
+                        <li><a href="http://krzysztof-jusiak.github.io/di/boost/libs/di/doc/html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
 
 		  <!--
                   <tr>
