Added DLL Library.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -461,6 +461,26 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>DLL</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/apolukhin/Boost.DLL">
+                            Source</a>
+                        <li><a href="http://apolukhin.github.io/Boost.DLL/index.html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+                     
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
