Variadic Macro Data was accepted.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -622,8 +622,11 @@ http://www.boost.org/development/website_updating.html
                   <td>August 21, 2014 - August 30, 2014</td>
 
                   <td>
+		    <del>
                     <a href=
-                    "http://lists.boost.org/boost-announce/2014/08/0413.php">Pending</a>
+                    "http://lists.boost.org/boost-announce/2014/08/0413.php">Pending</a></del><br>
+                    <a href=
+                    "http://lists.boost.org/boost-announce/2015/02/0432.php">Accepted</a>
                   </td>
                 </tr>
 
